# act

./: .gitignore  README.md  package.json  pyproject.toml
act/: cli.py  config.py  main.py  models.py  scheduling.py
act/calendar/: osascript.py
act/llm/: normalize.py  ollama.py  prompt.py
src/components/: Github.astro  Header.astro  Logo.astro
src/pages/: act.astro  framework.astro  index.astro
tests/: test_calendar.py  test_config.py  test_health.py  test_intent_correction.py  test_normalize.py  test_query.py  test_query_execute.py  test_scheduling.py  test_write_events.py
